# cpack-exercise-wt2526

./: CMakeLists.txt  Dockerfile
